<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoneyConverter</string>
    <string name="select">Select</string>
    <string name="moneyBeginInfo">Select the  une monnaie de départ</string>
    <string name="moneyEndInfo">Select the currency you have</string>
    <string name="amountInfo">Select the currency you want</string>
    <string name="result">The result is :</string>
    <string name="moneyBegin">Currency I Have</string>
    <string name="moneyEnd">Currency I Want</string>
    <string name="amount">Amount</string>
    <string name="amountHint">Enter the Amount</string>
    <string name="convert">Convert</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="aboutTxt">Copyright 2017 by Malah</string>
    <string name="finish">Return</string>
    <string name="config">Settings</string>
    <string name="display">Display</string>
    <string name="langage">Langage</string>
    <string name="clear">Clear Theme</string>
    <string name="dark">Dark Theme</string>
</resources>