<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/itmConfig"
        android:title="@string/config">
        <menu android:id="@+id/mnuConfig">
            <item android:id="@+id/itmLang"
                android:title="@string/langage" />
            <item android:id="@+id/itmDisplay"
                android:title="@string/display" />
            <item android:id="@+id/itmClear"
                android:title="@string/clear" />
            <item android:id="@+id/itmDark"
                android:title="@string/dark" />
        </menu>
    </item>
    <item android:id="@+id/itmAbout"
        android:title="@string/about" />
    <item android:id="@+id/itm"
        android:title="@string/exit"
        android:icon="@drawable/exit"
        android:onClick="exitMenu" />
</menu>