<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="afpa.learning.moneyconverter.MainActivity">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/moneyBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/lblMoneyBegin" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnMoneyBegin"
                android:minWidth="200dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/moneyEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblMoneyEnd" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spnMoneyEnd"
                android:minWidth="200dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAmount" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtAmount"
                android:hint="@string/amountHint"
                android:singleLine="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnConvert"
                android:elevation="0dp"
                android:clickable="true"
                android:onClick="convertAction" />

            <Button
                android:text="@string/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnExit"
                android:clickable="true"
                android:onClick="exitAction" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
